--- a/OmniCog/ekuo.ipynb
+++ b/OmniCog/ekuo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "704a913a",
+   "id": "bb307483",
    "metadata": {},
    "source": [
     "# Tasks\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "771746b0",
+   "id": "7574de04",
    "metadata": {},
    "source": [
     "# Loading Data"
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0eefa92d",
+   "id": "176fa7fe",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "544c343a",
+   "id": "847bd532",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "27835845",
+   "id": "07155212",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b4ee251",
+   "id": "e0502231",
    "metadata": {},
    "source": [
     "# COCO Data Class"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b19519c6",
+   "id": "dca6a61b",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eed979f",
+   "id": "500be037",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,15 +151,28 @@
     "    Attributes\n",
     "    ----------\n",
     "    images : list\n",
-    "        \n",
-    "\n",
+    "        list of image dictionaries\n",
+    "    captions : list\n",
+    "        list of caption dictionaries\n",
+    "    imageID_to_captionID : dictionary {int : int}\n",
+    "        dictionary that stores image IDs as the key and caption IDs as the value\n",
+    "    captionID_to_imgID : dictionary {int : int}\n",
+    "        dictionary that stores captions IDs as the key and image IDs as the value\n",
+    "    captionID_to_caption : dictionary {int : str}\n",
+    "        dictionary that stores captions IDs as the key and a caption as the value\n",
+    "    caption_to_captionID : dictionary {str : int}\n",
+    "        dictionary that stores captions as the key and a caption IDs as the value\n",
+    "    imageID_to_url : dictionary {int : str}\n",
+    "        dictionary that stores image IDs as the key and a coco URL as the value\n",
+    "    imageIDs : list\n",
+    "        unsorted list of all image IDs\n",
+    "    \n",
     "    Methods\n",
     "    -------\n",
-    "    colorspace(c='rgb')\n",
-    "        Represent the photo in the given colorspace.\n",
-    "    gamma(n=1.0)\n",
-    "        Change the photo's gamma exposure.\n",
-    "\n",
+    "    getCaptionIDs(self, img_id)\n",
+    "        Gives a list of caption IDs given an image ID\n",
+    "    getUrl(self, img_id)\n",
+    "        Gives a coco url given an image ID\n",
     "    \"\"\"\n",
     "    \n",
     "    def __init__ (self, coco_data):\n",
