--- a/OmniCog/alanw.ipynb
+++ b/OmniCog/alanw.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d184287b",
+   "id": "4686211f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "91167d72",
+   "execution_count": null,
+   "id": "28f52bce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
     "    #returns (validation, training)\n",
     "    return (image_ids[:breakpoint], image_ids[breakpoint:])\n",
     "\n",
-    "def extract_training_triples(path, trainingIDs):\n",
+    "def extract_triples(path, ids, validation=False):\n",
     "    \"\"\"\n",
     "    Gets triples every epoch\n",
     "    \n",
@@ -95,25 +95,18 @@
     "        Massive list of 2-tuple ids (true, caption)\n",
     "    \"\"\"\n",
     "    manager = load_coco(path)\n",
-    "    N = len(trainingIDs)\n",
-    "    \n",
-    "    tripleList = []\n",
-    "    \n",
-    "    for imID in trainingIDs:\n",
-    "        capID = random.choice(manager.getCaptionIDs(imID))\n",
-    "        tripleList.append((imID, capID, getConfuser(imID,trainingIDs)))\n",
-    "    \n",
-    "    return tripleList\n",
-    "\n",
-    "def extract_validation_triples(path, validationIDs):\n",
-    "    manager = load_coco(path)\n",
     "    image_ids = manager.imageIDs\n",
-    "    N = len(image_ids)\n",
+    "    \n",
+    "    N = len(ids)\n",
     "    \n",
     "    tripleList = []\n",
-    "    for imID in validationIDs:\n",
-    "        captionIDs = manager.getCaptionIDs(imID)\n",
-    "        tripleList.extend([(imID, capID, getConfuser(imID,validationIDs)) for capID in captionIDs])\n",
+    "    \n",
+    "    for imID in ids:\n",
+    "        if validation:\n",
+    "            captionIDs = manager.getCaptionIDs(imID)\n",
+    "        else:\n",
+    "            captionIDs = [random.choice(manager.getCaptionIDs(imID))]\n",
+    "        tripleList.extend([(imID, capID, getConfuser(imID,ids)) for capID in captionIDs])\n",
     "    return tripleList\n",
     "\n",
     "def getConfuser(trueID, confuserPool):\n",
@@ -122,7 +115,9 @@
     "        if choice!=trueID:\n",
     "            break\n",
     "    return choice\n",
-    "print(len(train_split()))"
+    "\n",
+    "path = \"captions_train2014.json\"\n",
+    "val, train = train_split(path)"
    ]
   }
  ],
