--- a/OmniCog/ekuo.ipynb
+++ b/OmniCog/ekuo.ipynb
@@ -166,6 +166,8 @@
     "        dictionary that stores image IDs as the key and a coco URL as the value\n",
     "    imageIDs : list\n",
     "        unsorted list of all image IDs\n",
+    "    captionID_to_captionEmbedding : dictionary {int : np.array(200,)}\n",
+    "        dictionary that stores caption IDs as the key and a caption embedding as the value\n",
     "    \n",
     "    Methods\n",
     "    -------\n",
@@ -176,6 +178,7 @@
     "    \"\"\"\n",
     "    \n",
     "    def __init__ (self, coco_data):\n",
+    "        from OmniCog import query_embed\n",
     "        \"\"\"\n",
     "        Initialize a CocoDataManager class instance\n",
     "\n",
@@ -198,13 +201,15 @@
     "        \n",
     "        self.imageIDs = [i[\"id\"] for i in self.images]\n",
     "        \n",
+    "        self.captionID_to_captionEmbedding = {}\n",
+    "        \n",
     "        for c in self.captions:\n",
     "            cap_id = c[\"id\"]\n",
     "            img_id = c[\"image_id\"]\n",
     "            cap = c[\"caption\"]\n",
     "            \n",
     "            # adding data to the imageID to captionID dictionary\n",
-    "            if (img_ID in self.imageID_to_captionID):\n",
+    "            if (img_id in self.imageID_to_captionID):\n",
     "                self.imageID_to_captionID[img_id].append(cap_id)\n",
     "            else:\n",
     "                self.imageID_to_captionID[img_id] = [cap_id]\n",
@@ -215,8 +220,11 @@
     "            # adding data to the captionID to caption dictionary\n",
     "            self.captionID_to_caption[cap_id] = cap\n",
     "            \n",
+    "            # adding data to the captionID to caption embedding dictionary\n",
+    "            self.captionID_to_captionEmbedding[cap_id] = query_embed(cap)\n",
+    "            \n",
     "        # adding data to the caption to captionID dictionary\n",
-    "        self.caption_to_captionID = {value:key for key, value in captionID_to_caption.items()}\n",
+    "        self.caption_to_captionID = {value:key for key, value in self.captionID_to_caption.items()}\n",
     "        \n",
     "        for img in self.images:\n",
     "            img_id = img[\"id\"]\n",
@@ -257,7 +265,7 @@
     "        String\n",
     "            The coco URL used to access/download an image\n",
     "        \"\"\"\n",
-    "        return self.imageID_to_url[img_id]"
+    "        return self.imageID_to_url[img_id]\n"
    ]
   }
  ],
