--- a/OmniCog/ekuo.ipynb
+++ b/OmniCog/ekuo.ipynb
@@ -35,7 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading file 'captions_train2014.json' from 'https://github.com/rsokl/cog_data/releases/download/language-files/captions_train2014.json' to 'C:\\Users\\evan_\\AppData\\Local\\cog_data\\cog_data\\Cache'.\n"
+      "Downloading file 'captions_train2014.json' from 'https://github.com/rsokl/cog_data/releases/download/language-files/captions_train2014.json' to '/home/ekuo/.cache/cog_data'.\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading file 'glove.6B.200d.txt.w2v' from 'https://github.com/rsokl/cog_data/releases/download/language-files/glove.6B.200d.txt.w2v' to 'C:\\Users\\evan_\\AppData\\Local\\cog_data\\cog_data\\Cache'.\n"
+      "Downloading file 'glove.6B.200d.txt.w2v' from 'https://github.com/rsokl/cog_data/releases/download/language-files/glove.6B.200d.txt.w2v' to '/home/ekuo/.cache/cog_data'.\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading file 'resnet18_features.pkl' from 'https://github.com/rsokl/cog_data/releases/download/language-files/resnet18_features.pkl' to 'C:\\Users\\evan_\\AppData\\Local\\cog_data\\cog_data\\Cache'.\n"
+      "Downloading file 'resnet18_features.pkl' from 'https://github.com/rsokl/cog_data/releases/download/language-files/resnet18_features.pkl' to '/home/ekuo/.cache/cog_data'.\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "554f7599",
    "metadata": {},
    "outputs": [
@@ -125,6 +125,7 @@
      "output_type": "stream",
      "text": [
       "<class 'list'>\n",
+      "<class 'dict'>\n",
       "<class 'dict'>\n"
      ]
     }
@@ -136,12 +137,13 @@
     "i = coco_data[\"images\"]\n",
     "print(type(i))\n",
     "\n",
-    "print(type(coco_data))"
+    "print(type(coco_data))\n",
+    "print(type(resnet18_features))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d35a8bac",
    "metadata": {},
    "outputs": [],
@@ -188,8 +190,16 @@
     "            The loaded json file as a dictionary\n",
     "        \"\"\"\n",
     "        \n",
-    "        self.images = coco_data[\"images\"]\n",
+    "        self.unprocessed_images = coco_data[\"images\"]\n",
     "        self.captions = coco_data[\"annotations\"]\n",
+    "        \n",
+    "        self.images = []\n",
+    "        \n",
+    "        # removing captions without ResNet descriptor\n",
+    "        for i in range(len(self.unprocessed_images)):\n",
+    "            if (self.unprocessed_images[i][\"id\"] in resnet18_features):\n",
+    "                self.images.append(self.unprocessed_images[i])\n",
+    "        \n",
     "        \n",
     "        self.imageID_to_captionID = {}\n",
     "        self.captionID_to_imgID = {}\n",
@@ -267,6 +277,68 @@
     "        \"\"\"\n",
     "        return self.imageID_to_url[img_id]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "966d193e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m manager \u001b[38;5;241m=\u001b[39m \u001b[43mCocoDataManager\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcoco_data\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36mCocoDataManager.__init__\u001b[0;34m(self, coco_data)\u001b[0m\n\u001b[1;32m     81\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcaptionID_to_caption[cap_id] \u001b[38;5;241m=\u001b[39m cap\n\u001b[1;32m     83\u001b[0m     \u001b[38;5;66;03m# adding data to the captionID to caption embedding dictionary\u001b[39;00m\n\u001b[0;32m---> 84\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcaptionID_to_captionEmbedding[cap_id] \u001b[38;5;241m=\u001b[39m \u001b[43mquery_embed\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcap\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     86\u001b[0m \u001b[38;5;66;03m# adding data to the caption to captionID dictionary\u001b[39;00m\n\u001b[1;32m     87\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcaption_to_captionID \u001b[38;5;241m=\u001b[39m {value:key \u001b[38;5;28;01mfor\u001b[39;00m key, value \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcaptionID_to_caption\u001b[38;5;241m.\u001b[39mitems()}\n",
+      "File \u001b[0;32m~/Github/CogWorks-2022-Gausslien-Language-Capstone/OmniCog/embed_query.py:18\u001b[0m, in \u001b[0;36mquery_embed\u001b[0;34m(query)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mquery_embed\u001b[39m(query):\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124;03m    Parameter:\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;124;03m        query: string\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;124;03m    \u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m     embed \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mzeros(\u001b[38;5;241m200\u001b[39m,)\n\u001b[1;32m     19\u001b[0m     tokens \u001b[38;5;241m=\u001b[39m tokenize_caption(query)\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "manager = CocoDataManager(coco_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcf42ecb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(resnet18_features) < len(manager.images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3597f80d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(resnet18_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ab52f53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(manager.images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5789510f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
