--- a/OmniCog/ekuo.ipynb
+++ b/OmniCog/ekuo.ipynb
@@ -154,7 +154,7 @@
     "        Gives a coco url given an image ID\n",
     "    \"\"\"\n",
     "    \n",
-    "    def __init__ (self, coco_data):\n",
+    "    def __init__ (self, coco_data, resnet):\n",
     "        from OmniCog import query_embed\n",
     "        \"\"\"\n",
     "        Initialize a CocoDataManager class instance\n",
@@ -172,7 +172,7 @@
     "        \n",
     "        # removing captions without ResNet descriptor\n",
     "        for i in range(len(self.unprocessed_images)):\n",
-    "            if (self.unprocessed_images[i][\"id\"] in resnet18_features):\n",
+    "            if (self.unprocessed_images[i][\"id\"] in resnet):\n",
     "                self.images.append(self.unprocessed_images[i])\n",
     "        \n",
     "        \n",
@@ -260,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "manager = CocoDataManager(coco_data)\n"
+    "manager = CocoDataManager(coco_data, resnet18_features)\n"
    ]
   },
   {
