--- a/OmniCog/EmbeddingModelNotebook.ipynb
+++ b/OmniCog/EmbeddingModelNotebook.ipynb
@@ -1194,7 +1194,7 @@
     "epochs = 10\n",
     "batch_size = 32\n",
     "\n",
-    "manager = CocoDataManager(coco_data)\n",
+    "manager = CocoDataManager(coco_data, resnet18_features)\n",
     "\n",
     "training, testing = train_split(manager.imageIDs)\n",
     "\n",
