--- a/OmniCog/EmbeddingModelNotebook.ipynb
+++ b/OmniCog/EmbeddingModelNotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "7fe9eb8e",
    "metadata": {},
    "outputs": [],
@@ -32,20 +32,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "48b7a5dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from gensim.models import KeyedVectors\n",
-    "filename = \"glove.6B.200d.txt.w2v\"\n",
-    "\n",
-    "# this takes a while to load -- keep this in mind when designing your capstone project\n",
-    "glove = KeyedVectors.load_word2vec_format(get_data_path(filename), binary=False, limit=500000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "8a97bb34",
    "metadata": {},
    "outputs": [],
@@ -57,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c5fcafe7",
    "metadata": {},
    "outputs": [],
@@ -67,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "da6180be",
    "metadata": {},
    "outputs": [],
@@ -110,7 +96,9 @@
     "            The normalized image embeddings predicted by the model\n",
     "        \"\"\"\n",
     "        embeddings = self.dense_layer(x)\n",
-    "        return embeddings / np.linalg.norm(embeddings)\n",
+    "        magnitude = np.linalg.norm(embeddings, axis=1, keepdims=True)\n",
+    "        \n",
+    "        return embeddings / magnitude\n",
     "        \n",
     "    @property\n",
     "    def parameters(self):\n",
@@ -127,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4314390f",
    "metadata": {},
    "outputs": [],
@@ -156,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7feb7214",
    "metadata": {},
    "outputs": [
@@ -1146,20 +1134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "3930b32d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from mynn.optimizers.sgd import SGD\n",
-    "\n",
-    "model = Model(512, 200)\n",
-    "optimizer = SGD(model.parameters, learning_rate = 1e-3, momentum=0.9)"
+    "from OmniCog import CocoDataManager, train_split, extract_triples\n",
+    "from OmniCog import margin_loss, batch_accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "76f66311",
    "metadata": {},
    "outputs": [],
@@ -1170,31 +1157,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
+   "id": "73921fc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "manager = CocoDataManager(coco_data, resnet18_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "c37838ad",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'resnet18_features' is not defined",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m epochs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m      5\u001b[0m batch_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m32\u001b[39m\n\u001b[0;32m----> 7\u001b[0m manager \u001b[38;5;241m=\u001b[39m \u001b[43mCocoDataManager\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcoco_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m training, testing \u001b[38;5;241m=\u001b[39m train_split(manager\u001b[38;5;241m.\u001b[39mimageIDs)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m iteration \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, epochs):\n",
-      "File \u001b[0;32m~/git/CogWorks-2022-Gausslien-Language-Capstone/OmniCog/manager.py:50\u001b[0m, in \u001b[0;36mCocoDataManager.__init__\u001b[0;34m(self, coco_data)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;66;03m# removing captions without ResNet descriptor\u001b[39;00m\n\u001b[1;32m     49\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39munprocessed_images)):\n\u001b[0;32m---> 50\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39munprocessed_images[i][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;129;01min\u001b[39;00m \u001b[43mresnet18_features\u001b[49m):\n\u001b[1;32m     51\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimages\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39munprocessed_images[i])\n\u001b[1;32m     54\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimageID_to_captionID \u001b[38;5;241m=\u001b[39m {}\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'resnet18_features' is not defined"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     49\u001b[0m true_x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([resnet18_features[true_vec][\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m (true_vec, _, _) \u001b[38;5;129;01min\u001b[39;00m test_batch])\n\u001b[1;32m     50\u001b[0m conf_x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([resnet18_features[confuse_vec][\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m (_, _, confuse_vec) \u001b[38;5;129;01min\u001b[39;00m test_batch])\n\u001b[0;32m---> 52\u001b[0m true_embedding \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrue_x\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     53\u001b[0m confuser_embedding \u001b[38;5;241m=\u001b[39m model(conf_x)\n\u001b[1;32m     55\u001b[0m caption_embedding \u001b[38;5;241m=\u001b[39m [manager\u001b[38;5;241m.\u001b[39mcaptionID_to_captionEmbedding[captionid] \u001b[38;5;28;01mfor\u001b[39;00m (_, captionid, _) \u001b[38;5;129;01min\u001b[39;00m test_batch]\n",
+      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36mModel.__call__\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, x):\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;124;03m    Does one forward pass of the network\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;124;03m    \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;124;03m        The normalized image embeddings predicted by the model\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 38\u001b[0m     embeddings \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdense_layer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     39\u001b[0m     magnitude \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(embeddings, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, keepdims\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     41\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m embeddings \u001b[38;5;241m/\u001b[39m magnitude\n",
+      "File \u001b[0;32m~/.conda/envs/week3/lib/python3.8/site-packages/mynn/layers/dense.py:71\u001b[0m, in \u001b[0;36mdense.__call__\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, x):\n\u001b[1;32m     59\u001b[0m     \u001b[38;5;124;03m\"\"\" Perform the forward-pass of the densely-connected layer over `x`.\u001b[39;00m\n\u001b[1;32m     60\u001b[0m \n\u001b[1;32m     61\u001b[0m \u001b[38;5;124;03m    Parameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;124;03m        The result of applying the dense layer wx + b.\u001b[39;00m\n\u001b[1;32m     70\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 71\u001b[0m     out \u001b[38;5;241m=\u001b[39m \u001b[43mmatmul\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mweight\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m out \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbias \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbias \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m out\n",
+      "File \u001b[0;32m~/.conda/envs/week3/lib/python3.8/site-packages/mygrad/ufuncs/_ufunc_creators.py:272\u001b[0m, in \u001b[0;36mMyGradBinaryUfuncNoMask.__call__\u001b[0;34m(cls, x, y, out, dtype, constant)\u001b[0m\n\u001b[1;32m    270\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m out\n\u001b[1;32m    271\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 272\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mTensor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_op\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    273\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mcls\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_wrapped_op\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    274\u001b[0m \u001b[43m        \u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    275\u001b[0m \u001b[43m        \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    276\u001b[0m \u001b[43m        \u001b[49m\u001b[43mop_kwargs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdtype\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    277\u001b[0m \u001b[43m        \u001b[49m\u001b[43mconstant\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconstant\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    278\u001b[0m \u001b[43m        \u001b[49m\u001b[43mout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    279\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.conda/envs/week3/lib/python3.8/site-packages/mygrad/tensor_base.py:1093\u001b[0m, in \u001b[0;36mTensor._op\u001b[0;34m(cls, Op, op_args, op_kwargs, constant, out, *input_vars)\u001b[0m\n\u001b[1;32m   1091\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   1092\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m out \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 1093\u001b[0m         op_out: np\u001b[38;5;241m.\u001b[39mndarray \u001b[38;5;241m=\u001b[39m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mtensor_vars\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mop_args\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mop_kwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1094\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1095\u001b[0m         op_out: np\u001b[38;5;241m.\u001b[39mndarray \u001b[38;5;241m=\u001b[39m f(\u001b[38;5;241m*\u001b[39mtensor_vars, \u001b[38;5;241m*\u001b[39mop_args, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mop_kwargs, out\u001b[38;5;241m=\u001b[39mout)\n",
+      "File \u001b[0;32m~/.conda/envs/week3/lib/python3.8/site-packages/mygrad/operation_base.py:383\u001b[0m, in \u001b[0;36mBinaryUfunc.__call__\u001b[0;34m(self, x1, x2, out, where, dtype)\u001b[0m\n\u001b[1;32m    381\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumpy_ufunc(x1\u001b[38;5;241m.\u001b[39mdata, x2\u001b[38;5;241m.\u001b[39mdata, out\u001b[38;5;241m=\u001b[39mout, where\u001b[38;5;241m=\u001b[39mwhere, dtype\u001b[38;5;241m=\u001b[39mdtype)\n\u001b[1;32m    382\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 383\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy_ufunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "from OmniCog import CocoDataManager, train_split, extract_triples\n",
-    "from OmniCog import margin_loss, batch_accuracy\n",
+    "model = Model(512, 200)\n",
+    "optimizer = SGD(model.parameters, learning_rate = 1e-3, momentum=0.9)\n",
     "\n",
     "epochs = 10\n",
     "batch_size = 32\n",
-    "\n",
-    "manager = CocoDataManager(coco_data, resnet18_features)\n",
     "\n",
     "training, testing = train_split(manager.imageIDs)\n",
     "\n",
@@ -1209,42 +1208,52 @@
     "        batch_indices = indices[batch_count * batch_size : (batch_count+1) * batch_size]\n",
     "        batch = training_data[batch_indices]\n",
     "        \n",
-    "        true_embedding = model([resnet18_features[true_vec] for (true_vec, caption, confuse_vec) in batch]) \n",
-    "        confuser_embedding = model([resnet18_features[confuse_vec] for (true_vec, caption, confuse_vec) in batch])\n",
+    "        true_x = np.array([resnet18_features[true_vec][0] for (true_vec, _, _) in batch])\n",
+    "        conf_x = np.array([resnet18_features[confuse_vec][0] for (_, _, confuse_vec) in batch])\n",
     "        \n",
-    "        caption_embedding = [manager.captionID_to_captionEmbedding[caption] for (true_vec, caption, confuse_vec) in batch]\n",
     "        \n",
-    "        print(true_embedding.shape, caption_embedding.shape, confuser_embedding.shape)\n",
+    "        true_embedding = model(true_x)\n",
+    "        confuser_embedding = model(conf_x)\n",
+    "        \n",
+    "        caption_embedding = [manager.captionID_to_captionEmbedding[captionid] for (_, captionid, _) in batch]\n",
+    "        caption_embedding = np.array(caption_embedding)\n",
+    "        \n",
     "        loss = margin_loss(true_embedding, caption_embedding, confuser_embedding)\n",
-    "        accuracy = batch_accuracy(loss)\n",
     "        \n",
-    "        loss.backward()\n",
+    "        accuracy = batch_accuracy(loss)\n",
+    "        avg_loss = np.mean(loss)\n",
+    "        \n",
+    "        avg_loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
-    "        plotter.set_train_batch({\"loss\":loss.item(), \"accuracy\":accuracy}, batch_size=batch_size, plot=False)\n",
-    "\n",
+    "        plotter.set_train_batch({\"loss\":avg_loss.item(), \"accuracy\":accuracy}, batch_size=batch_size, plot=False)\n",
     "    # creates a shuffled array of training indices  \n",
-    "    testing_data = extract_triples(\"captions_train2014.json\", testing, validation=True)\n",
+    "    testing_data = extract_triples(manager, testing, validation=True)\n",
     "    test_indices = np.arange(len(testing_data))\n",
     "    np.random.shuffle(test_indices)\n",
-    "        \n",
+    "    \n",
     "    # calculates the loss and accuracy for the validation data in batches\n",
     "    for batch_count in range(0, len(testing_data)//batch_size):\n",
-    "        testing_data = extract_triples(manager, testing, validation=True)\n",
     "        test_batch_indices = test_indices[batch_count * batch_size : (batch_count+1) * batch_size]\n",
     "        test_batch = testing_data[test_batch_indices]\n",
     "        \n",
-    "        true_embedding = model([resnet18_features[true_vec] for (true_vec, caption, confuse_vec) in test_batch]) \n",
-    "        confuser_embedding = model([resnet18_features[confuse_vec] for (true_vec, caption, confuse_vec) in test_batch])\n",
+    "        true_x = np.array([resnet18_features[true_vec][0] for (true_vec, _, _) in test_batch])\n",
+    "        conf_x = np.array([resnet18_features[confuse_vec][0] for (_, _, confuse_vec) in test_batch])\n",
     "        \n",
-    "        caption_embedding = [manager.captionID_to_captionEmbedding[caption] for (true_vec, caption, confuse_vec) in test_batch]\n",
+    "        true_embedding = model(true_x)\n",
+    "        confuser_embedding = model(conf_x)\n",
     "        \n",
-    "        test_loss = loss(true_embedding, caption_embedding, confuser_embedding)\n",
-    "        test_accuracy = accuracy(test_loss)\n",
+    "        caption_embedding = [manager.captionID_to_captionEmbedding[captionid] for (_, captionid, _) in test_batch]\n",
+    "        caption_embedding = np.array(caption_embedding)\n",
     "        \n",
-    "        plotter.set_test_batch({\"loss\":test_loss.item(), \"accuracy\":test_accuracy}, batch_size=batch_size, plot=False)\n",
+    "        test_loss = margin_loss(true_embedding, caption_embedding, confuser_embedding)\n",
+    "        test_accuracy = batch_accuracy(loss)\n",
+    "        test_avg_loss = np.mean(loss)\n",
+    "        \n",
+    "        plotter.set_test_batch({\"loss\":test_avg_loss.item(), \"accuracy\":test_accuracy}, batch_size=batch_size)\n",
     "    \n",
     "    # plots the loss and accuracy in each epoch\n",
+    "    print(iteration)\n",
     "    plotter.set_train_epoch()\n",
     "    plotter.set_test_epoch()\n",
     "\n",
